@@ -33,18 +33,14 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class DrawsQueryServiceImpl implements DrawsQueryService {
-
-    private final GoodsRepository goodsRepository;
-    private final MembersRepository membersRepository;
     private final DrawsRepository drawsRepository;
-    private final RafflesRepository rafflesRepository;
     private final GoodsCategoriesRepository goodsCategoriesRepository;
-    private final RedisTemplate<String, Object> redisTemplate;
 
     public DrawsResponse.DrawsResponseByGoodsListDTO getResultByGoodsId(Long goodsId) {
         List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
@@ -57,34 +53,33 @@ public class DrawsQueryServiceImpl implements DrawsQueryService {
                 .build();
     }
 
-    public DrawsResponse.DrawsResponseByGoodsListDTO getWaitlistByGoodsId(Members members, Long goodsId) {
+    public DrawsResponse.DrawsResponseByWaitlistGoodsIdListDTO getWaitlistByGoodsId(Members members, Long goodsId) {
         if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
-        List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
+        List<DrawsResponse.DrawsResponseByWaitlistGoodsIdDTO> waitlistGoodsIdDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() == Status.WAITLIST)
-                .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
-            .toList();
+                .map(DrawsResponse.DrawsResponseByWaitlistGoodsIdDTO::from)
+                .collect(Collectors.toList());
 
-        return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
-                .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
+        return DrawsResponse.DrawsResponseByWaitlistGoodsIdListDTO.builder()
+                .drawsResponseByWaitlistGoodsIdDTOS(waitlistGoodsIdDTOS)
                 .build();
     }
 
-    public DrawsResponse.DrawsResponseByGoodsListDTO getWinnersByGoodsId(Members members, Long goodsId) {
+    public DrawsResponse.DrawsResponseByWinnerGoodsIdListDTO getWinnersByGoodsId(Members members, Long goodsId) {
         if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
-        List<DrawsResponse.DrawsResponseByGoodsDTO> drawsResponseByGoodsDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
+        List<DrawsResponse.DrawsResponseByWinnerGoodsIdDTO> winnerGoodsIdDTOS = (drawsRepository.findByGoodsId(goodsId)).stream()
                 .filter(draws -> draws.getStatus() != Status.WAITLIST && draws.getStatus() != Status.NON_WINNER)
-                .map(DrawsResponse.DrawsResponseByGoodsDTO::from)
+                .map(DrawsResponse.DrawsResponseByWinnerGoodsIdDTO::from)
             .toList();
 
-        return DrawsResponse.DrawsResponseByGoodsListDTO.builder()
-                .drawsResponseByGoodsDTOList(drawsResponseByGoodsDTOS)
+        return DrawsResponse.DrawsResponseByWinnerGoodsIdListDTO.builder()
+                .drawsResponseByWinnerGoodsIdDTOS(winnerGoodsIdDTOS)
                 .build();
     }
 
-    public DrawsResponse.DrawsResponseByMembersListDTO getCompleteRafflesByMemberId(String memberId) {
-        Members members = membersRepository.findById(memberId).orElseThrow(() -> new ApiException(ErrorStatus._UNAUTHORIZED));
-        if (!(members.getRole().equals(Role.ADMIN))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
-        List<DrawsResponse.DrawsResponseByMembersDTO> drawsResponseByMembersDTOS = (drawsRepository.findByMemberId(memberId)).stream()
+    public DrawsResponse.DrawsResponseByMembersListDTO getCompleteRafflesByMemberId(Members member) {
+        if (!(member.getRole().equals(Role.MEMBER))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
+        List<DrawsResponse.DrawsResponseByMembersDTO> drawsResponseByMembersDTOS = (drawsRepository.findByMemberId(member.getId())).stream()
                 .filter(draws -> draws.getRaffleId().getGoodsId().getGoodsStatus() == GoodsStatus.COMPLETED)
                 .map(draws -> {
                     String categoryName = (goodsCategoriesRepository.findByGoodsId(draws.getRaffleId().getGoodsId())).map(goodsCategories -> goodsCategories.getCategoryId().getName()).orElse("NONE");
